--- a/css/head_anim.css
+++ b/css/head_anim.css
@@ -1,6 +1,7 @@
 
 .img-max{
-	max-width:300px;
+	max-width:400px;
+	max-height:400px;
 	width:100%;
 }
 
@@ -27,15 +28,14 @@
 }
 
 #head-section{
-	background-image: linear-gradient(rgba(0, 153, 153,0.9) 55%, rgba(255,255,255,0));	
-	border:1px solid blue;
+	background-image: linear-gradient(#5A342C 20%, rgba(255,255,255,0));	
 	float:left;
 	overflow: hidden;
 	z-index: -1;
 }
 
 #head-div1{
-	
+
 	z-index:0;
 }
 
