--- a/css/global.css
+++ b/css/global.css
@@ -1,30 +1,6 @@
 .body{
 	background-color: black;                //(240, 240, 245) grey
 	color:white;
-	width:100vw;
-}
+	width:100%;
 
-#name{
-	font-family:marvel;
-	font-size: 9vw;
-	text-align: center;
-	color: #AE4934;
-	opacity:0.9;
-	margin-top: -15vh;
-}
-
-#head-div2{
-
-
-}
-
-@font-face {
-    font-family: marvel;
-    font-weight: bold;
-    src:url("../fonts/strasua.ttf") ;
-}
-
-@font-face {
-    font-family: caviar;
-    src: url('Caviar-Dreams/Caviar_Dreams_Bold.ttf');
 }
