--- a/css/info-div.css
+++ b/css/info-div.css
@@ -11,8 +11,9 @@
 	position:absolute;
 	height: 86vh;
 	border:2px solid red;
-	width: 100vw;
-	margin-left: 1vw;
+	width: 100%;
+	margin-left: 1.3%;
+	overflow-x: hidden;
 }
 
 #display_pic{
